--- a/src/Interfaces/Officers.form
+++ b/src/Interfaces/Officers.form
@@ -430,23 +430,29 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Component class="javax.swing.JTable" name="jTable1">
+        <Component class="javax.swing.JTable" name="jTOfficers">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="9" rowCount="0">
-                <Column editable="true" title="Tipo Identificaci&#xf3;n" type="java.lang.Object"/>
-                <Column editable="true" title="N&#xfa;mero Identificaci&#xf3;n" type="java.lang.Object"/>
-                <Column editable="true" title="Nombre Completo" type="java.lang.Object"/>
-                <Column editable="true" title="Tipo Funcionario" type="java.lang.Object"/>
-                <Column editable="true" title="Fecha Nacimiento" type="java.lang.Object"/>
-                <Column editable="true" title="Correo Electr&#xf3;nico" type="java.lang.Object"/>
-                <Column editable="true" title="Profesi&#xf3;n" type="java.lang.Object"/>
-                <Column editable="true" title="Celular" type="java.lang.Object"/>
-                <Column editable="true" title="G&#xe9;nero" type="java.lang.Object"/>
+              <Table columnCount="10" rowCount="0">
+                <Column editable="true" title="id_funcionario" type="java.lang.Object"/>
+                <Column editable="true" title="tipo_id" type="java.lang.Object"/>
+                <Column editable="true" title="nombres_funcionario" type="java.lang.Object"/>
+                <Column editable="true" title="apellidos_funcionario" type="java.lang.Object"/>
+                <Column editable="true" title="tipo_funcionario" type="java.lang.Object"/>
+                <Column editable="true" title="fecha_nacimiento" type="java.lang.Object"/>
+                <Column editable="true" title="correo_electronico" type="java.lang.Object"/>
+                <Column editable="true" title="profesion" type="java.lang.Object"/>
+                <Column editable="true" title="num_celular" type="java.lang.Object"/>
+                <Column editable="true" title="genero" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
               <TableColumnModel selectionModel="0">
+                <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                  <Title/>
+                  <Editor/>
+                  <Renderer/>
+                </Column>
                 <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                   <Title/>
                   <Editor/>
